configure mailer send email
